# clawtab

./: .gitignore  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.html  skaffold.yaml
.github/: FUNDING.yml
.github/workflows/: build-test.yml  release.yml
desktop/: .gitignore  debug.html  dev-desktop-watch.sh  package.json  plan.md  pnpm-lock.yaml  pty_debug.html  restart-dev-app.sh  settings.html  setup-dev-app.sh  stop-dev-app.sh  tmux_debug.html  tsconfig.json  vite.config.ts
desktop/docs/: remote.md
desktop/local-dev/: paths.sh
desktop/src/: constants.ts  debug.tsx  pty_debug.tsx  settings.tsx  shortcuts.ts  tmux_debug.tsx  types.ts
desktop/src-tauri/: Cargo.toml  Info.dev.plist  build.rs  clippy.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/engine-app/: Info.plist
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/scripts/: build-engine-app-for-bundle.sh  build-engine-app.sh  dev-daemon-reload.sh  dev-daemon-watch.sh
desktop/src-tauri/src/: agent.rs  agent_hooks.rs  claude_session.rs  claude_usage.rs  daemon.rs  events.rs  focus.rs  ipc.rs  job_context.rs  lib.rs  macos_window.rs  main.rs  native_notifications.rs  notifications.rs  process_snapshot.rs  pty.rs  questions.rs  updater.rs  usage.rs  watcher.rs
desktop/src-tauri/src/agent_session/: antigravity.rs  claude.rs  codex.rs  common.rs  mod.rs  opencode.rs
desktop/src-tauri/src/browser/: mod.rs
desktop/src-tauri/src/commands/: agent_hooks.rs  browser.rs  claude_history.rs  daemon.rs  debug.rs  history.rs  jobs.rs  mod.rs  processes.rs  pty.rs  relay.rs  secrets.rs  settings.rs  skills.rs  status.rs  telegram.rs  tmux.rs  tools.rs  usage.rs
desktop/src-tauri/src/config/: jobs.rs  mod.rs  protected_panes.rs  settings.rs
desktop/src-tauri/src/cwt/: mod.rs
desktop/src-tauri/src/debug_spawn/: mod.rs
desktop/src-tauri/src/history/: mod.rs
desktop/src-tauri/src/pty/: cache.rs  capture.rs  cleanup.rs  emit.rs  mod.rs  viewer.rs
desktop/src-tauri/src/pty/spawn/: attach.rs  mod.rs  prepare.rs  reader.rs  reuse.rs  view_session.rs
desktop/src-tauri/src/relay/: handler.rs  mod.rs
desktop/src-tauri/src/scheduler/: executor.rs  mod.rs  monitor.rs  reattach.rs
desktop/src-tauri/src/scheduler/executor/: binary.rs  binary_runtime.rs  claude.rs  finalize.rs  folder.rs  mod.rs  notification.rs  params.rs  tmux_spawn.rs
desktop/src-tauri/src/secrets/: gopass.rs  keychain.rs  mod.rs
desktop/src-tauri/src/telegram/: commands.rs  mod.rs  polling.rs  types.rs
desktop/src-tauri/src/telegram/polling/: agent.rs  cleanup.rs  dispatch.rs  mod.rs  updates.rs
desktop/src-tauri/src/terminal/: mod.rs
desktop/src-tauri/src/tmux/: mod.rs
desktop/src-tauri/src/tools/: mod.rs
docs/: README.md  architecture.md  cli-tui.md  configuration.md  deploy.md  file-reference.md  job-types.md  project-layout.md  quick-start.md  remote.md  secrets.md  sharing.md  telegram.md  vim-tmux-navigation.md
etc/: Dockerfile.relay  com.clawtab.daemon.plist  docker-compose.yaml  identity.md
mobile/: app.json  package-lock.json  package.json  pnpm-lock.yaml
mobile/app/: _layout.tsx  login.tsx
patches/: react-native-screens@4.18.0.patch
protocol/: Cargo.toml
protocol/src/: job.rs  lib.rs  messages.rs
relay/: Cargo.toml  README.md  test-push.sh  test_ws_relay.py
relay/migrations/: 001_initial.sql  002_google_auth.sql  003_billing.sql  004_push_notifications.sql  005_workspace_shares.sql  006_share_allowed_groups.sql  007_apple_auth.sql
relay/src/: apns.rs  auth_session.rs  config.rs  db.rs  error.rs  main.rs  notification_fmt.rs  push_limiter.rs
relay/src/auth/: apple.rs  google.rs  jwt.rs  mod.rs  password.rs
relay/src/billing/: mod.rs
relay/src/routes/: account.rs  answer.rs  apple_auth.rs  apple_callback.rs  auth_session.rs  debug.rs  device.rs  google_auth.rs  google_callback.rs  health.rs  iap.rs  internal.rs  login.rs  mod.rs  notifications.rs  refresh.rs  register.rs  share.rs  subscription.rs
relay/src/ws/: desktop.rs  handler.rs  hub.rs  mobile.rs  mod.rs  push.rs  session.rs  shared.rs
remote/: app-store-content.md  app.json  metro.config.js  package.json  pnpm-lock.yaml  tsconfig.json
remote/app/: _layout.tsx  index.tsx  login.tsx  notifications.tsx  register.tsx
remote/nse/: NotificationService.swift
remote/plugins/: with-native-answer.js
scripts/: gen-tray-icon.py
shared/: package.json  tsconfig.json
shared/src/: assets.d.ts  index.ts  transport.ts
src/: settings.css  settings.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_usage.rs  ipc.rs  lib.rs  main.rs  updater.rs
src-tauri/src/aerospace/: mod.rs
src-tauri/src/browser/: applescript.rs  mod.rs
src-tauri/src/commands/: aerospace.rs  browser.rs  claude_usage.rs  history.rs  jobs.rs  mod.rs  relay.rs  secrets.rs  settings.rs  skills.rs  status.rs  telegram.rs  tmux.rs  tools.rs  updater.rs
src-tauri/src/config/: jobs.rs  mod.rs  settings.rs
src-tauri/src/cwdt/: mod.rs
src-tauri/src/cwt/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/relay/: mod.rs
src-tauri/src/scheduler/: executor.rs  mod.rs  monitor.rs  reattach.rs
src-tauri/src/secrets/: gopass.rs  keychain.rs  mod.rs
src-tauri/src/telegram/: commands.rs  mod.rs  polling.rs  types.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/tmux/: mod.rs
src-tauri/src/tools/: mod.rs
src/components/: BrowserPanel.tsx  ConfirmDialog.tsx  CronInput.tsx  icons.tsx  (+14 more)
tmux-clawtab/: clawtab.tmux
triggers/: Cargo.toml
triggers/migrations/: 001_api_tokens.sql  1002_trigger_runs.sql  1003_api_token_encrypted.sql
triggers/src/: config.rs  crypto.rs  db.rs  dispatch.rs  error.rs  janitor.rs  main.rs  notify.rs
triggers/src/auth/: api_token.rs  jwt.rs  mod.rs
triggers/src/routes/: api_tokens.rs  mod.rs  triggers.rs
website/: Dockerfile  docs.html  eslint.config.cjs  index.html  nginx.conf  package.json  pnpm-lock.yaml  skaffold.yaml  style.css  vite.config.ts
(+354 files in other folders)
