[package]
name = "clawdtab"
version = "0.1.0"
edition = "2021"
default-run = "clawdtab"

[lib]
name = "clawdtab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cwdtctl"
path = "src/bin/ctl.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process"] }
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }

[lints.rust]
warnings = "deny"
unused = "deny"

[profile.release]
panic = "abort"
