[package]
name = "clawtab-triggers"
version = "0.1.0"
edition = "2021"

[dependencies]
clawtab-protocol = { path = "../protocol" }

axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

dotenvy = "0.15"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"

anyhow = "1"
thiserror = "2"

[lints.rust]
warnings = "deny"
unused = "deny"
