[package]
name = "clawtab"
version = "0.4.5"
edition = "2021"
default-run = "clawtab"

[lints.clippy]
too_many_lines = "warn"
cognitive_complexity = "warn"
type_complexity = "warn"
too_many_arguments = "warn"

[lib]
name = "clawtab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cwtctl"
path = "src/bin/ctl.rs"

[[bin]]
name = "cwttui"
path = "src/bin/tui.rs"

[[bin]]
name = "clawtab-daemon"
path = "src/bin/daemon.rs"

[features]
default = ["desktop"]
desktop = [
  "dep:tauri",
  "dep:tauri-plugin-opener",
  "dep:tauri-plugin-dialog",
  "dep:tauri-plugin-updater",
  "dep:tauri-plugin-deep-link",
  "dep:tauri-plugin-notification",
  "dep:tauri-build",
]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-deep-link = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process", "signal"] }
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
ratatui = "0.29"
crossterm = "0.28"
clawtab-protocol = { path = "../../protocol" }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures-util = "0.3"
tokio-util = "0.7"
gethostname = "1"
base64 = "0.22"
libc = "0.2"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
portable-pty = "0.8"

[lints.rust]
warnings = "deny"
unused = "deny"

[profile.release]
panic = "abort"
